--- a/consultation/freetrail.html
+++ b/consultation/freetrail.html
@@ -63,7 +63,7 @@
       <div class="absolute bottom-0 right-0 w-[700px] h-[700px] translate-x-1/3 translate-y-1/3 rounded-full blur-3xl opacity-30 bg-[radial-gradient(closest-side,rgba(99,102,241,0.45),rgba(18,18,27,0))]"></div>
     </div>
 
-    <!-- Header -->
+    <!-- Nav -->
     <header class="z-50 sticky border-white/5 border-b relative top-0 backdrop-blur-xl">
       <div class="border border-[#1a1a1a] rounded-full mt-4 mx-auto max-w-7xl px-4 md:px-8">
         <div class="flex h-16 items-center justify-between">
@@ -86,19 +86,198 @@
             <a href="../featured.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Featured</a>
             <a href="../solutions.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Solutions</a>
             <a href="../pricing.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Pricing</a>
+           
           </nav>
 
-          <!-- Right: Mobile Menu Button + Back to Home -->
+          <!-- Right: Desktop Button + Mobile Buttons -->
           <div class="flex items-center gap-3">
+            <!-- Desktop Button: Shiny CTA (keeps id for JS) -->
+            <div class="inline-block">
+              <div class="inline-block bg-transparent">
+                <style>
+                  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+
+                  @property --gradient-angle {
+                    syntax: "<angle>";
+                    initial-value: 0deg;
+                    inherits: false;
+                  }
+
+                  @property --gradient-angle-offset {
+                    syntax: "<angle>";
+                    initial-value: 0deg;
+                    inherits: false;
+                  }
+
+                  @property --gradient-percent {
+                    syntax: "<percentage>";
+                    initial-value: 20%;
+                    inherits: false;
+                  }
+
+                  @property --gradient-shine {
+                    syntax: "<color>";
+                    initial-value: #8484ff;
+                    inherits: false;
+                  }
+
+                  .shiny-cta {
+                    --gradient-angle: 0deg;
+                    --gradient-angle-offset: 0deg;
+                    --gradient-percent: 20%;
+                    --gradient-shine: #8484ff;
+                    --shadow-size: 2px;
+                    position: relative;
+                    overflow: hidden;
+                    border-radius: 8px;
+                    padding: 0.75rem 1.5rem;
+                    font-size: 0.9rem;
+                    line-height: 1.2;
+                    font-weight: 500;
+                    color: #ffffff;
+                    background: linear-gradient(#000000, #000000) padding-box, conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent 0%, #1d4ed8 5%, var(--gradient-shine) 15%, #1d4ed8 30%, transparent 40%, transparent 100%) border-box;
+                    border: 2px solid transparent;
+                    box-shadow: inset 0 0 0 1px #1a1818;
+                    outline: none;
+                    transition: --gradient-angle-offset 800ms cubic-bezier(0.25, 1, 0.5, 1), --gradient-percent 800ms cubic-bezier(0.25, 1, 0.5, 1), --gradient-shine 800ms cubic-bezier(0.25, 1, 0.5, 1), box-shadow 0.3s;
+                    cursor: pointer;
+                    isolation: isolate;
+                    outline-offset: 4px;
+                    font-family: 'Inter', 'Helvetica Neue', sans-serif;
+                    z-index: 0;
+                    animation: border-spin 2.5s linear infinite;
+                  }
+
+                  /* Mobile styles */
+                  @media (max-width: 768px) {
+                    .shiny-cta {
+                      padding: 0.5rem;
+                      width: 36px;
+                      height: 36px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      font-size: 0;
+                      min-width: unset;
+                      overflow: hidden;
+                      text-indent: -9999px;
+                      border-radius: 6px;
+                    }
+                  }
+
+                  @keyframes border-spin {
+                    to {
+                      --gradient-angle: 360deg;
+                    }
+                  }
+
+                  .shiny-cta:active {
+                    transform: translateY(1px);
+                  }
+
+                  .shiny-cta::before {
+                    content: '';
+                    pointer-events: none;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: 0;
+                    --size: calc(100% - 5px);
+                    --position: 2px;
+                    --space: 4px;
+                    width: var(--size);
+                    height: var(--size);
+                    background: radial-gradient(circle at var(--position) var(--position), white 0.5px, transparent 0) padding-box;
+                    background-size: var(--space) var(--space);
+                    background-repeat: space;
+                    mask-image: conic-gradient(from calc(var(--gradient-angle) + 45deg), black, transparent 10% 90%, black);
+                    border-radius: inherit;
+                    opacity: 0.4;
+                    pointer-events: none;
+                  }
+
+                  .shiny-cta::after {
+                    content: '';
+                    pointer-events: none;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: 1;
+                    width: 100%;
+                    aspect-ratio: 1;
+                    background: linear-gradient(-50deg, transparent, #1d4ed8, transparent);
+                    mask-image: radial-gradient(circle at bottom, transparent 40%, black);
+                    opacity: 0.6;
+                    animation: shimmer 4s linear infinite;
+                    animation-play-state: running;
+                  }
+
+                  .shiny-cta span {
+                    position: relative;
+                    z-index: 2;
+                    display: inline-block;
+                  }
+
+                  .shiny-cta span::before {
+                    content: '';
+                    pointer-events: none;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    z-index: -1;
+                    --size: calc(100% + 0.75rem);
+                    width: var(--size);
+                    height: var(--size);
+                    box-shadow: inset 0 -0.8ex 1.6rem 3px #1d4ed8;
+                    opacity: 0;
+                    border-radius: inherit;
+                    transition: opacity 800ms cubic-bezier(0.25, 1, 0.5, 1);
+                    animation: breathe 4.5s linear infinite;
+                  }
+
+                  @keyframes shimmer {
+                    to {
+                      transform: translate(-50%, -50%) rotate(360deg);
+                    }
+                  }
+
+                  @keyframes breathe {
+
+                    0%,
+                    100% {
+                      transform: translate(-50%, -50%) scale(1);
+                    }
+
+                    50% {
+                      transform: translate(-50%, -50%) scale(1.20);
+                    }
+                  }
+                </style>
+                <button id="consultation-btn-desktop" class="shiny-cta focus:outline-none" aria-label="Book Free Consultation">
+                  <!-- Only show content on desktop -->
+                  <div class="contents md:block">
+                    <span>Book Free Consultation</span>
+                  </div>
+                  <!-- Only show icon on mobile -->
+                  <div class="md:hidden flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                    </svg>
+                  </div>
+                </button>
+              </div>
+            </div>
+
             <!-- Mobile Menu Button (Hamburger) -->
-            <button id="mobile-menu-button" class="md:hidden p-2 text-zinc-400 hover:text-white focus:outline-none">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <button id="mobile-menu-button" class="md:hidden p-2 text-zinc-400 hover:text-white focus:outline-none transition-all duration-200 hover:bg-white/10 rounded-lg">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 transition-transform duration-200 hover:scale-110" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
               </svg>
             </button>
-
-            <!-- Desktop Back to Home -->
-            <a href="../index.html" class="hidden md:inline-block px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">← Back to Home</a>
+            
           </div>
         </div>
       </div>
